--- a/style.css
+++ b/style.css
@@ -15,7 +15,21 @@ header {
     overflow: hidden;
  }
 
- 
+#about{
+   height: 750px;
+   
+}
+
+#about img{
+   
+      height: 12rem;
+      width: 12rem;
+      border: 1px solid #F06000;
+      border-radius: 50%;
+      margin: 0.9rem 1rem 0 2rem;
+      float: left;
+  
+}
 
 ul#nav {
     min-height: 48px;
@@ -55,4 +69,18 @@ ul#nav {
 
  .intro{
     margin-top: 189px;
+ }
+
+ section{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
+
+ .elementdesc{
+   max-width: 800px;
+ }
+ 
+ h5{
+   margin: 0;
  }
