--- a/style_timeline.css
+++ b/style_timeline.css
@@ -28,9 +28,9 @@
 .timeline::after{
     content: "";
     position:absolute;
-    width: 5px;
+    width: 2px;
     background-color: black;
-    top:80px;
+    top: 50px;
     bottom: 0;
     left:50%;
     margin-left: -3px;
@@ -106,7 +106,7 @@
   }
   
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 661px) {
     /* Place the timelime to the left */
     .timeline::after {
     left: 31px;
@@ -131,8 +131,11 @@
     .left::after, .right::after {
     left: 15px;
     }
-    
+    .intro{
+        color: white;
+    }
     /* Make all right containers behave like the left ones */
     .right {
     left: 0%;
     }
+}
