--- a/css/card.css
+++ b/css/card.css
@@ -72,3 +72,34 @@ top:10px;
     transition: 1s ease;
     background-color: #223351;
 }
+.cert img{
+    
+    height: 60px;
+    transition: all 0.5s ease;
+}
+.cert img:hover{
+    opacity: 50%;
+}
+
+.certification{
+    width: 100%;
+    max-width: 800px;
+   background-color: white;
+   padding-bottom: 25px;
+}
+.cert{
+
+    display: flex;
+    padding-top: 25px;
+    
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+   
+
+   
+}
+
+.cert a:hover{
+    cursor: pointer;
+    
+}
