--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   --text-color:black;
   --background-color:#f7fafc;
   --div-background-color:#ffffff;
+  --scale:0;
+  --tooltip-color: #333;
+  --arrow-size:10px;
+  
 }
 html{
    scroll-behavior: smooth;
@@ -14,6 +18,7 @@ body{
     
 }
 header {
+
     position: relative;
     height: 100vh;
     min-height: 500px;
@@ -86,6 +91,15 @@ ul#nav {
 .skills{
   background-color: var(--div-background-color);
   color: var(--text-color);
+  max-width: 800px;
+}
+.skillbar{
+  margin:0;
+  margin-bottom: 25px;
+ 
+}
+.skillbar li{
+  padding: 0px 5px 0px 5px;
 }
  section{
    background-color: var(--background-color);
@@ -222,6 +236,45 @@ section h3 {
 .reveal.active{
   transform: translateY(0);
   opacity: 1;
+}
+
+.tooltip{
+  position: relative;
+}
+.tooltip::after,
+.tooltip::before{
+  position: absolute;
+  
+  bottom: -0.15rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(var(--translate-y,0)) scale(var(--scale));
+  transition: 50ms transform;
+  transform-origin: top center;
+}
+
+.tooltip::before{
+  --translate-y: calc(100% - var(--arrow-size));
+  content:attr(data-tooltip);
+  color: white;
+  padding:.5rem;
+  width:max-content;
+  max-width:100px;
+  text-align: center;
+  border-radius: .3rem;
+  font-size: 1rem;
+  background: var(--tooltip-color);
+}
+
+/* .tooltip::after{
+  content:"";
+  --translate-y: calc(1*var(--arrow-size));
+  border: var(--arrow-size) solid transparent;
+  border-top-color: var(--tooltip-color);
+  transform-origin: bottom center;
+} */
+.tooltip:hover::before,
+.tooltip:hover::after{
+--scale:1;
 }
 
 @media screen and (max-width: 661px) {
